--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SHOP FOR GAMERS</title>
   <link rel="stylesheet" href="./sass/index.scss" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&family=Roboto:wght@400;700&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="~node_modules/modern-normalize/modern-normalize.css">
-  <script type="module" src="./index.js"></script>
-</head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="~node_modules/modern-normalize/modern-normalize.css"
+    />
+    <script type="module" src="./index.js"></script>
+  </head>
 
 <body>
   <!-- ❗️❗️❗️ Add partials like so for every page -->
