--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,36 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
+    <footer class="footer">
+      <h2>SHOP FOR GAMERS</h2>
+      <ul>
+        <li>Accessories</li>
+        <li>Take order</li>
+        <li>Contact</li>
+        <li>Blog</li>
+      </ul>
+      <ul>
+        <li>inst</li>
+        <li>youtube</li>
+        <li>fb</li>
+      </ul>
+      <h3>Email</h3>
+      <a class="footer-link" href="mailto:sfg.info@gmail.com"
+        >sfg.info@gmail.com</a
+      >
+      <h3>Phone number</h3>
+      <ul>
+        <li>
+          <a class="footer-link" href="tel:+38 (093) 643 22 88"
+            >+38 (093) 643 22 88</a
+          >
+        </li>
+        <li>
+          <a class="footer-link" href="tel:+38 (050) 345 44 23"
+            >+38 (050) 345 44 23</a
+          >
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
