--- a/src/index.html
+++ b/src/index.html
@@ -14,17 +14,28 @@
 
     <footer class="footer">
       <div class="footer-container">
-        <h2 class="footer-logo">
-          SHOP FOR <br />
+        <a class="footer-logo" href="./index.html"
+           > SHOP FOR <br />
           GAMERS
+          </a>
+        <h2 class="footer-logo">
+          
         </h2>
         <div class="footer-flex">
           <section>
             <ul class="footer-list">
-              <li class="footer-item">Accessories</li>
-              <li class="footer-item">Take order</li>
-              <li class="footer-item">Contact</li>
-              <li class="footer-item">Blog</li>
+              <li class="footer-item">
+                <a class="footer-list-link" href="">Accessories</a>
+              </li>
+              <li class="footer-item">
+                <a class="footer-list-link" href="">Take order</a>
+              </li>
+              <li class="footer-item">
+                <a class="footer-list-link" href="">Contact</a>
+              </li>
+              <li class="footer-item">
+                <a class="footer-list-link" href="">Blog</a>
+              </li>
             </ul>
           </section>
 
