--- a/src/index.html
+++ b/src/index.html
@@ -43,18 +43,24 @@
           <section>
             <ul class="footer-soc-list">
               <li class="footer-soc-item">
-                <a href="">
-                  <svg class="footer-soc-icon" width="10.5" height="10.5"></svg>
+                <a class="footer-soc-link" href="">
+                  <svg class="footer-soc-icon" width="12" height="12">
+                     <use href="./images/icons.svg#icon-social-instagram"></use>
+                  </svg>
                 </a>
               </li>
               <li class="footer-soc-item">
-                <a href="">
-                  <svg class="footer-soc-icon" width="12" height="8"></svg>
+                <a class="footer-soc-link" href="">
+                  <svg class="footer-soc-icon" width="12" height="12">
+                     <use href="./images/icons.svg#icon-social-youtube"></use>
+                  </svg>
                 </a>
               </li>
               <li class="footer-soc-item">
-                <a href="">
-                  <svg class="footer-soc-icon" width="6.5" height="12"></svg>
+                <a class="footer-soc-link" href="">
+                  <svg class="footer-soc-icon" width="12" height="12">
+                     <use href="./images/icons.svg#icon-social-facebook"></use>
+                  </svg>
                 </a>
               </li>
             </ul>
