without links on pages and bg(mobile and desktop)

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
+    <include src="./partials/sales.html"></include>
     
   </body>
 </html>
