index.html and index.js updated

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,13 @@
   </head>
 
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
-    
+    <!-- header -->
+
+    <main>
+      <!-- @biggujo - Dmytro Ivashchenko -->
+      <include src="./partials/hero.html"></include>
+    </main>
+
+    <!-- footer -->
   </body>
 </html>
