--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,14 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
-    
+
+    <!-- @biggujo - Dmytro Ivashchenko -->
+    <include src="./partials/index-slider.html"></include>
+
+    <!--  -->
+    <script src="../node_modules/@glidejs/glide/dist/glide.min.js"></script>
+    <script>
+      new Glide('.glide').mount();
+    </script>
   </body>
 </html>
