add component lines

--- a/src/takeOrder.html
+++ b/src/takeOrder.html
@@ -21,16 +21,8 @@
 
     <section class="to__main container">
         <h1 class="to__title">Take order</h1>
-        <div class="to__line">
-            <div class="to__line_first">
-                <div class="to__line-one"></div>
-                <div class="to__line-two"></div>
-            </div>
-            <div class="to__line_second">
-                <div class="to__line-three"></div>
-                <div class="to__line-four"></div>
-            </div>
-        </div>
+
+        <include src="./partials/lines.html"></include>
 
         <div class="to__product_info">
             <h2 class="to__name">Xiberia K9 PRO PC Headset</h2>
@@ -44,9 +36,9 @@
                             srcset="./images/take-order/to-img-main-mob.jpg 1x, ./images/take-order/to-img-main-mob-2x.jpg 2x"
                             media="(max-width: 767px)" />
                         <img class="to__img-main" src="./images/take-order/to-img-main.jpg"
-                            alt="picture Xiberia K9 PRO PC Headset" width="387"/>
+                            alt="picture Xiberia K9 PRO PC Headset" width="387" />
                     </picture>
-                    
+
                 </div>
                 <div class="to__price">
                     <p class="to__sale-price">65.14 USD</p>
