bugs fixed, classes renamed

--- a/src/take-order.html
+++ b/src/take-order.html
@@ -19,15 +19,15 @@
 
     <!-- Тут должен бфть Хедер -->
 
-    <section class="to__main container">
-        <h1 class="to__title">Take order</h1>
+    <section class="to-main container">
+        <h1 class="to-title">Take order</h1>
 
         <include src="./partials/lines.html"></include>
 
-        <div class="to__product_info">
-            <h2 class="to__name">Xiberia K9 PRO PC Headset</h2>
+        <div class="to-product-info">
+            <h2 class="to-name">Xiberia K9 PRO PC Headset</h2>
             <div class="product">
-                <div class="to__image_main">
+                <div class="to-image-main">
                     <picture>
                         <source
                             srcset="./images/take-order/to-img-main.jpg 1x, ./images/take-order/to-img-main-2x.jpg 2x"
@@ -35,20 +35,20 @@
                         <source
                             srcset="./images/take-order/to-img-main-mob.jpg 1x, ./images/take-order/to-img-main-mob-2x.jpg 2x"
                             media="(max-width: 767px)" />
-                        <img class="to__img-main" src="./images/take-order/to-img-main.jpg"
+                        <img class="to-img-main" src="./images/take-order/to-img-main.jpg"
                             alt="picture Xiberia K9 PRO PC Headset" width="387" />
                     </picture>
 
                 </div>
-                <div class="to__price">
-                    <p class="to__sale-price">65.14 USD</p>
-                    <p class="to__discount-price">55.14 USD</p>
+                <div class="to-price">
+                    <p class="to-sale-price">65.14 USD</p>
+                    <p class="to-discount-price">55.14 USD</p>
                 </div>
             </div>
 
-            <div class="to__images">
-                <ul class="to__images-list list">
-                    <li class="to__image_item">
+            <div class="to-images">
+                <ul class="to-images-list list">
+                    <li class="to-image-item">
                         <picture>
                             <source
                                 srcset="./images/take-order/to-img-secondary_1.jpg 1x, ./images/take-order/to-img-secondary_1-2x.jpg 2x"
@@ -56,11 +56,11 @@
                             <source
                                 srcset="./images/take-order/to-img-secondary-mob_1.jpg 1x, ./images/take-order/to-img-secondary-mob_1-2x.jpg 2x"
                                 media="(max-width: 767px)" />
-                            <img class="to__image-img" src="./images/take-order/to-img-secondary_1.jpg"
+                            <img class="to-image-img" src="./images/take-order/to-img-secondary_1.jpg"
                                 alt="product image 1" width="154" />
                         </picture>
                     </li>
-                    <li class="to__image_item">
+                    <li class="to-image-item">
                         <picture>
                             <source
                                 srcset="./images/take-order/to-img-secondary_2.jpg 1x, ./images/take-order/to-img-secondary_2-2x.jpg 2x"
@@ -68,11 +68,11 @@
                             <source
                                 srcset="./images/take-order/to-img-secondary-mob_2.jpg 1x, ./images/take-order/to-img-secondary-mob_2-2x.jpg 2x"
                                 media="(max-width: 767px)" />
-                            <img class="to__image-img" src="./images/take-order/to-img-secondary_2.jpg"
+                            <img class="to-image-img" src="./images/take-order/to-img-secondary_2.jpg"
                                 alt="product image 2" width="154" />
                         </picture>
                     </li>
-                    <li class="to__image_item">
+                    <li class="to-image-item">
                         <picture>
                             <source
                                 srcset="./images/take-order/to-img-secondary_3.jpg 1x, ./images/take-order/to-img-secondary_3-2x.jpg 2x"
@@ -80,11 +80,11 @@
                             <source
                                 srcset="./images/take-order/to-img-secondary-mob_3.jpg 1x, ./images/take-order/to-img-secondary-mob_3-2x.jpg 2x"
                                 media="(max-width: 767px)" />
-                            <img class="to__image-img" src="./images/take-order/to-img-secondary_3.jpg"
+                            <img class="to-image-img" src="./images/take-order/to-img-secondary_3.jpg"
                                 alt="product image 3" width="154" />
                         </picture>
                     </li>
-                    <li class="to__image_item">
+                    <li class="to-image_item">
                         <picture>
                             <source
                                 srcset="./images/take-order/to-img-secondary_4.jpg 1x, ./images/take-order/to-img-secondary_4-2x.jpg 2x"
@@ -92,7 +92,7 @@
                             <source
                                 srcset="./images/take-order/to-img-secondary-mob_4.jpg 1x, ./images/take-order/to-img-secondary-mob_4-2x.jpg 2x"
                                 media="(max-width: 767px)" />
-                            <img class="to__image-img" src="./images/take-order/to-img-secondary_4.jpg"
+                            <img class="to-image-img" src="./images/take-order/to-img-secondary_4.jpg"
                                 alt="product image 4" width="154" />
                         </picture>
                     </li>
@@ -100,23 +100,23 @@
             </div>
         </div>
 
-        <div class="to__contact">
-            <p class="to__contact-title">CONTACT US</p>
-            <div class="to_form">
+        <div class="to-ontact">
+            <p class="to-contact-title">CONTACT US</p>
+            <div class="to-form">
                 <form>
-                    <div class="to__form-full">
-                        <div class="to__form-send">
-                            <div class="to__form-field">
+                    <div class="to-form-full">
+                        <div class="to-form-send">
+                            <div class="to-form-field">
                                 <label>
-                                    <input type="text" name="name" class="to__form-input" placeholder="Name"
+                                    <input type="text" name="name" class="to-form-input" placeholder="Name"
                                         pattern="^[a-zA-Z]+\s[a-zA-Z]+$"
                                         title="Username should only contain lowercase letters. e.g. john" />
                                 </label>
                             </div>
 
-                            <div class="to__form-field">
+                            <div class="to-form-field">
                                 <label>
-                                    <input type="email" name="email" class="to__form-input" id="email"
+                                    <input type="email" name="email" class="to-form-input" id="email"
                                         placeholder="Email">
                                 </label>
                             </div>
@@ -181,14 +181,14 @@
                             <!-- Select конец -->
 
                         </div>
-                        <div class="to_form_text">
-                            <label class="to__form-field comment">Leave your message</label>
-                            <textarea name="comment" class="to__form-textarea" placeholder=""></textarea>
+                        <div class="to-form-text">
+                            <label class="to-form-field comment">Leave your message</label>
+                            <textarea name="comment" class="to-form-textarea" placeholder=""></textarea>
                         </div>
                     </div>
-                    <div class="to__form-btn-grp">
-                        <button type="submit" class="to__form-btn to__form-btn-buy">buy it now</button>
-                        <button type="submit" class="to__form-btn to__form-btn-add">ADD TO CART</button>
+                    <div class="to-form-btn-grp">
+                        <button type="submit" class="to-form-btn to-form-btn-buy">buy it now</button>
+                        <button type="submit" class="to-form-btn to-form-btn-add">ADD TO CART</button>
                     </div>
                 </form>
             </div>
