--- a/src/blog.html
+++ b/src/blog.html
@@ -18,15 +18,10 @@
         <!---------------------section blog------------------->
         <section class="blog">
             <div class="container">
-                <!-- заголовок секції однаковий- такий же як Take order  и  Contacts -->
-                <!-- тому клас треба додати йому такий же як у iнших  -->
-
+                
                 <h2 class="page-name">Blog</h2>
 
-                <!-- додати подвійну линию ЧЕРЕЗ SVG
-                <svg class="" with="" height="">
-                <use href="./images/symbol-defs.svg#icon-ПОДВІЙНА ЛИНИЯ "></use>
-                </svg>-->
+                 <!-- <include src="./partials/lines.html"></include> -->
 
                 <ul class="blog-list">
                     <li class="blog-item">
