--- a/src/blog.html
+++ b/src/blog.html
@@ -18,10 +18,13 @@
         <!---------------------section blog------------------->
         <section class="blog">
             <div class="container">
-                
+
                 <h2 class="page-name">Blog</h2>
 
-                 <!-- <include src="./partials/lines.html"></include> -->
+                <!-- додати подвійну линию  -->
+                <!-- <include src="./partials/lines.html"></include> -->
+
+
 
                 <ul class="blog-list">
                     <li class="blog-item">
