--- a/src/blog.html
+++ b/src/blog.html
@@ -24,8 +24,6 @@
                 <!-- додати подвійну линию  -->
                 <!-- <include src="./partials/lines.html"></include> -->
 
-
-
                 <ul class="blog-list">
                     <li class="blog-item">
                         <div class="blog-picture-desktop">
@@ -66,6 +64,7 @@
 
                             <!-- посилання на Blog Article Page -->
                             <a class="blog-etg" href="#">Learn more</a>
+                            <!-- <a class="blog-etg" href="./blog-article.html">Learn more</a> -->
                         </div>
                     </li>
                     <!------------------------------->
@@ -108,6 +107,7 @@
 
                             <!-- посилання на Blog Article Page -->
                             <a class="blog-etg" href="#">Learn more</a>
+                            <!-- <a class="blog-etg" href="./blog-article.html">Learn more</a> -->
                         </div>
                     </li>
 
@@ -150,6 +150,7 @@
 
                             <!-- посилання на Blog Article Page -->
                             <a class="blog-etg" href="#">Learn more</a>
+                            <!-- <a class="blog-etg" href="./blog-article.html">Learn more</a> -->
                         </div>
                     </li>
                 </ul>
