--- a/src/blog.html
+++ b/src/blog.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="./sass/index.scss" />
+    <link rel="stylesheet" href="./sass/index.scss"/>
 
     <title> Blog Page</title>
 
@@ -18,11 +18,15 @@
         <!---------------------section blog------------------->
         <section class="blog">
             <div class="container">
+                <!-- заголовок секції однаковий- такий же як Take order  и  Contacts -->
+                <!-- тому клас треба додати йому такий же як у iнших  -->
 
                 <h2 class="page-name">Blog</h2>
 
-                <!-- додати подвійну линию  -->
-                <!-- <include src="./partials/lines.html"></include> -->
+                <!-- додати подвійну линию ЧЕРЕЗ SVG
+                <svg class="" with="" height="">
+                <use href="./images/symbol-defs.svg#icon-ПОДВІЙНА ЛИНИЯ "></use>
+                </svg>-->
 
                 <ul class="blog-list">
                     <li class="blog-item">
@@ -64,7 +68,6 @@
 
                             <!-- посилання на Blog Article Page -->
                             <a class="blog-etg" href="#">Learn more</a>
-                            <!-- <a class="blog-etg" href="./blog-article.html">Learn more</a> -->
                         </div>
                     </li>
                     <!------------------------------->
@@ -107,7 +110,6 @@
 
                             <!-- посилання на Blog Article Page -->
                             <a class="blog-etg" href="#">Learn more</a>
-                            <!-- <a class="blog-etg" href="./blog-article.html">Learn more</a> -->
                         </div>
                     </li>
 
@@ -150,7 +152,6 @@
 
                             <!-- посилання на Blog Article Page -->
                             <a class="blog-etg" href="#">Learn more</a>
-                            <!-- <a class="blog-etg" href="./blog-article.html">Learn more</a> -->
                         </div>
                     </li>
                 </ul>
