--- a/src/blog.html
+++ b/src/blog.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="./sass/index.scss"/>
+    <link rel="stylesheet" href="./sass/index.scss" />
 
     <title> Blog Page</title>
 
@@ -151,8 +151,20 @@
                 </ul>
             </div>
 
-            <!--  тут Маркерам знизу слід додати анімації
+
+
+            <!--  Додала анімацію
             для імітації процесу підвантаження інформації на сторінці. -->
+
+            <!--------------------------------------------------------->
+            <div class="loading">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <!--------------------------------------------------------->
+
+
         </section>
 
         <!--   тут має бути footer  -->
