add button script, fixebag

--- a/src/take-order.html
+++ b/src/take-order.html
@@ -107,18 +107,15 @@
                     <div class="to-form-full">
                         <div class="to-form-send">
                             <div class="to-form-field">
-                                <label>
-                                    <input type="text" name="name" class="to-form-input" placeholder="Name"
-                                        pattern="^[a-zA-Z]+\s[a-zA-Z]+$"
-                                        title="Username should only contain lowercase letters. e.g. john" />
-                                </label>
+                                <input type="text" name="name" class="to-form-input" placeholder=""
+                                    pattern="^[a-zA-Z]+\s[a-zA-Z]+$"
+                                    title="Username should only contain lowercase letters. e.g. john" />
+                                <label class="to-form-label">Name</label>
                             </div>
 
                             <div class="to-form-field">
-                                <label>
-                                    <input type="email" name="email" class="to-form-input" id="email"
-                                        placeholder="Email">
-                                </label>
+                                <input type="email" name="email" class="to-form-input" id="email" placeholder="">
+                                <label class="to-form-label">Email</label>
                             </div>
                             <!-- Select с выпадающим списком -->
                             <div class="select-box">
@@ -187,8 +184,10 @@
                         </div>
                     </div>
                     <div class="to-form-btn-grp">
-                        <button type="submit" class="to-form-btn to-form-btn-buy">buy it now</button>
-                        <button type="submit" class="to-form-btn to-form-btn-add">ADD TO CART</button>
+                        <button type="submit" class="to-form-btn to-form-btn-buy js-open-modal" data-modal="1">buy it
+                            now</button>
+                        <button type="submit" class="to-form-btn to-form-btn-add js-open-modal" data-modal="2">ADD TO
+                            CART</button>
                     </div>
                 </form>
             </div>
@@ -198,6 +197,7 @@
     <!-- Тут должен быть футер -->
 
     <script src="/src/js/take-order.js"></script>
+    <script src="/src/js/modal-2scr.js"></script>
 </body>
 
 </html>
