fix paths to scripts

--- a/src/take-order.html
+++ b/src/take-order.html
@@ -196,8 +196,8 @@
 
     <!-- Тут должен быть футер -->
 
-    <!-- <script src="./index.js"></script>
-    <script src="./js/modal-2scr.js"></script> -->
+    <script src="./index.js"></script>
+    <script src="./js/modal-2scr.js"></script>
 </body>
 
 </html>
