removed class in js files modal windows

--- a/src/take-order.html
+++ b/src/take-order.html
@@ -184,9 +184,9 @@
                         </div>
                     </div>
                     <div class="to-form-btn-grp">
-                        <button type="submit" class="to-form-btn to-form-btn-buy js-open-modal" data-modal="1">buy it
+                        <button type="submit" class="to-form-btn to-form-btn-buy data-open-modal" data-modal="1">buy it
                             now</button>
-                        <button type="submit" class="to-form-btn to-form-btn-add js-open-modal" data-modal="2">ADD TO
+                        <button type="submit" class="to-form-btn to-form-btn-add data-open-modal" data-modal="2">ADD TO
                             CART</button>
                     </div>
                 </form>
