--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
-    <include src="./blog.html"></include>
+    <!-- <include src="./blog.html"></include> -->
+     <include src="./contacts.html"></include>
   </body>
 </html>
