fix error name var

--- a/src/take-order.html
+++ b/src/take-order.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Take order</title>
+    <include src="./partials/head-favicon.html"></include>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +18,7 @@
 
 <body>
 
-    <!-- Тут должен бфть Хедер -->
+    <!-- <include src="./partials/header.html"></include> -->
 
     <section class="to-main container">
         <h1 class="to-title">Take order</h1>
@@ -194,7 +195,7 @@
         </div>
     </section>
 
-    <!-- Тут должен быть футер -->
+    <!-- <include src="./partials/footer.html"></include> -->
 
     <script src="./index.js"></script>
     <script src="./js/modal-2scr.js"></script>
