--- a/src/contacts.html
+++ b/src/contacts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./sass/index.scss" />
 
     <title>Contacts page</title>
+    <include src="./partials/head-favicon.html"></include>
 </head>
 
 <body>
@@ -35,10 +36,11 @@
                 <div class="contacts-container-form">
                     <div class="contacts-container-desktop">
                         <div class="contacts-content">
-                            <span>In case of queries about order handling and/
+                            <p>In case of queries about order handling and/
                                 or delay, drop us an email at<br />
                                 <br />
-                                info@shopforgamers.com </span>
+                                info@shopforgamers.com
+                            </p>
                         </div>
                         <div class="contacts-container-tablet">
                             <!------------ мило  ------------>
@@ -49,8 +51,8 @@
 
                             <!----------------телефони --------------->
                             <div class="contacts-tel">
+                                <p class="contacts-link-text">Phone number</p>
                                 <ul class="contacts-list">
-                                    <p class="contacts-link-text">Phone number</p>
                                     <li class="contacts-item">
                                         <a class="contacts-link" href="tel:+380936432288">+38 (093) 643 22 88</a>
                                     </li>
@@ -63,10 +65,10 @@
                     </div>
                     <!------------------------------------->
                     <div class="form-contacts">
-                        <!-- дадати форму CONTACT US -->
+                        <!-- додати форму CONTACT US -->
                     </div>
 
-                    <!-- дадати кнопку SEND -->
+                    <!-- додати кнопку SEND -->
                     <!------------------------------------->
                 </div>
             </div>
