--- a/src/blog.html
+++ b/src/blog.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./sass/index.scss" />
 
     <title> Blog Page</title>
-
+<include src="./partials/head-favicon.html"></include>
 </head>
 
 <body>
