--- a/src/take-order.html
+++ b/src/take-order.html
@@ -33,11 +33,8 @@
                         <source
                             srcset="./images/take-order/to-img-main.jpg 1x, ./images/take-order/to-img-main-2x.jpg 2x"
                             media="(min-width: 768px)" />
-                        <source
-                            srcset="./images/take-order/to-img-main-mob.jpg 1x, ./images/take-order/to-img-main-mob-2x.jpg 2x"
-                            media="(max-width: 767px)" />
                         <img class="to-img-main" src="./images/take-order/to-img-main.jpg"
-                            alt="picture Xiberia K9 PRO PC Headset" width="387" />
+                            alt="picture Xiberia K9 PRO PC Headset" width="448" />
                     </picture>
 
                 </div>
@@ -53,49 +50,42 @@
                         <picture>
                             <source
                                 srcset="./images/take-order/to-img-secondary_1.jpg 1x, ./images/take-order/to-img-secondary_1-2x.jpg 2x"
-                                media="(min-width: 768px)" />
-                            <source
-                                srcset="./images/take-order/to-img-secondary-mob_1.jpg 1x, ./images/take-order/to-img-secondary-mob_1-2x.jpg 2x"
-                                media="(max-width: 767px)" />
+                                media="(min-width: 320px)" />
                             <img class="to-image-img" src="./images/take-order/to-img-secondary_1.jpg"
-                                alt="product image 1" width="154" />
+                                alt="product image 1" />
                         </picture>
+
                     </li>
                     <li class="to-image-item">
                         <picture>
                             <source
                                 srcset="./images/take-order/to-img-secondary_2.jpg 1x, ./images/take-order/to-img-secondary_2-2x.jpg 2x"
-                                media="(min-width: 768px)" />
-                            <source
-                                srcset="./images/take-order/to-img-secondary-mob_2.jpg 1x, ./images/take-order/to-img-secondary-mob_2-2x.jpg 2x"
-                                media="(max-width: 767px)" />
+                                media="(min-width: 320px)" />
                             <img class="to-image-img" src="./images/take-order/to-img-secondary_2.jpg"
-                                alt="product image 2" width="154" />
+                                alt="product image 2" />
                         </picture>
+
                     </li>
                     <li class="to-image-item">
                         <picture>
                             <source
                                 srcset="./images/take-order/to-img-secondary_3.jpg 1x, ./images/take-order/to-img-secondary_3-2x.jpg 2x"
-                                media="(min-width: 768px)" />
-                            <source
-                                srcset="./images/take-order/to-img-secondary-mob_3.jpg 1x, ./images/take-order/to-img-secondary-mob_3-2x.jpg 2x"
-                                media="(max-width: 767px)" />
+                                media="(min-width: 320px)" />
                             <img class="to-image-img" src="./images/take-order/to-img-secondary_3.jpg"
-                                alt="product image 3" width="154" />
+                                alt="product image 3" />
+
                         </picture>
+
                     </li>
                     <li class="to-image_item">
                         <picture>
                             <source
                                 srcset="./images/take-order/to-img-secondary_4.jpg 1x, ./images/take-order/to-img-secondary_4-2x.jpg 2x"
-                                media="(min-width: 768px)" />
-                            <source
-                                srcset="./images/take-order/to-img-secondary-mob_4.jpg 1x, ./images/take-order/to-img-secondary-mob_4-2x.jpg 2x"
-                                media="(max-width: 767px)" />
+                                media="(min-width: 320px)" />
                             <img class="to-image-img" src="./images/take-order/to-img-secondary_4.jpg"
-                                alt="product image 4" width="154" />
+                                alt="product image 4" />
                         </picture>
+
                     </li>
                 </ul>
             </div>
