--- a/src/take-order.html
+++ b/src/take-order.html
@@ -17,89 +17,8 @@
 </head>
 
 <body>
-
-    <!-- <include src="./partials/header.html"></include> -->
-    <section class="header">
-        <div class="header-container container">
-            <a href="./index.html" class="header-logo">SHOP FOR GAMERS</a>
-            <nav class="navigation">
-                <ul class="header-menu list header-menu-connect">
-                    <li class="header-menu-item">
-                        <a href="#" class="header-menu-link link">Accessories</a>
-                    </li>
-                    <li class="header-menu-item">
-                        <a href="#" class="header-menu-link link">Contact</a>
-                    </li>
-                    <li class="header-menu-item">
-                        <a href="#" class="header-menu-link link">Blog</a>
-                    </li>
-                </ul>
-            </nav>
-
-            <a href="#" class="header-btn">Shop now</a>
-
-            <button type="button" class="btn-menu-open" data-menu-open>
-                <svg class="btn-menu-icon" width="54" height="36" aria-label="Мобильное меню">
-                    <use href="./images/icons.svg#icon-menu-open-burger"></use>
-                </svg>
-            </button>
-            <!-- <button type="button" class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
-                
-            </button>
-
-            <div class="menu-container js-menu-container" id="mobile-menu">
-                <div class="menu-container-shadow"></div>
-                <button class="menu-toggle js-close-menu">
-                    <svg class="btn-menu-icon" width="36" height="36" aria-label="Мобильное меню">
-                        <use href="./images/icons.svg#icon-icon-menu-close-cross"></use>
-                    </svg>
-                </button>
-
-                <div class="main-menu-top">
-                    <ul class="mobile-menu">
-                        <li class="mobil-menu-item">
-                            <a href="./index.html" class="mobil-menu-link link">Accessories</a>
-                        </li>
-                        <li class="mobil-menu-item">
-                            <a href="#" class="mobil-menu-link link">Contact</a>
-                        </li>
-                        <li class="mobil-menu-item">
-                            <a href="#" class="mobil-menu-link link">Blog</a>
-                        </li>
-                    </ul>
-                </div>
-
-            </div> -->
-        </div>
-        <div class="header-mob-menu container is-hidden" data-menu>
-            <div class="mob-container">
-                <button type="button" class="btn-menu-close" data-menu-close>
-                    <svg class="btn-menu-icon" width="54" height="36" aria-label="Мобильное меню">
-                        <use href="./images/icons.svg#icon-icons-cross"></use>
-                    </svg>
-                </button>
-                <ul class="mobile-menu">
-                    <li class="mobil-menu-item">
-                        <a href="./index.html" class="mobil-menu-link link">Accessories</a>
-                    </li>
-                    <li class="mobil-menu-item">
-                        <a href="#" class="mobil-menu-link link">Contact</a>
-                    </li>
-                    <li class="mobil-menu-item">
-                        <a href="#" class="mobil-menu-link link">Blog</a>
-                    </li>
-                </ul>
-            </div>
-
-
-
-        </div>
-
-    </section>
-
-
-
-
+    <include src="./partials/header.html"></include>
+ 
     <section class="to-main container">
         <h1 class="to-title">Take order</h1>
 
