--- a/src/take-order.html
+++ b/src/take-order.html
@@ -221,7 +221,8 @@
                         id="SilverGray"
                         name="category"
                       />
-                      <label for="SilverGray">K9D Silver Gray</label>fd15013700536386355f5d1dcfd7a6fe4f653:src/takeOrder.html
+                      <label for="SilverGray">K9D Silver Gray</label
+                      >fd15013700536386355f5d1dcfd7a6fe4f653:src/takeOrder.html
                     </div>
 
                     <div class="option">
@@ -319,15 +320,7 @@
 
     <!-- <include src="./partials/footer.html"></include> -->
 
-<<<<<<< HEAD:src/take-order.html
     <script src="./index.js"></script>
-
-    <!-- <script src="./js/modal-2scr.js"></script> -->
-</body>
-
-</html>
-=======
     <script src="/src/js/take-order.js"></script>
   </body>
 </html>
->>>>>>> 227fd15013700536386355f5d1dcfd7a6fe4f653:src/takeOrder.html
