--- a/src/take-order.html
+++ b/src/take-order.html
@@ -221,8 +221,7 @@
                         id="SilverGray"
                         name="category"
                       />
-                      <label for="SilverGray">K9D Silver Gray</label
-                      >fd15013700536386355f5d1dcfd7a6fe4f653:src/takeOrder.html
+                      <label for="SilverGray">K9D Silver Gray</label>
                     </div>
 
                     <div class="option">
