fixes for other pages

--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,12 @@
   </head>
 
   <body>
-    <include src="./partials/hero.html"></include>
-
     <!-- @AKSEIEV -->
     <include src="./partials/header.html"></include>
+
+    <main>
+      <include src="./partials/hero.html"></include>
+    </main>
 
     <include src="./partials/footer.html"></include>
   </body>
