added script for index.html

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <!--  -->
     <script src="../node_modules/@glidejs/glide/dist/glide.min.js"></script>
     <script>
-      new Glide('.glide').mount();
+      new Glide('.glide', { type: 'carousel', autoplay: 5000 }).mount();
     </script>
   </body>
 </html>
