--- a/src/accessories.html
+++ b/src/accessories.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog article</title>
+    <title>Accessories</title>
     <include src="./partials/head-favicon.html"></include>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
@@ -13,9 +13,15 @@
     <include src="./partials/header.html"></include>
 
     <main>
-      <include src="./partials/blog-article.html"></include>
+      <include src="./partials/accessories.html"></include>
     </main>
 
     <include src="./partials/footer.html"></include>
+
+    <!-- ! Glider.js -->
+    <script src="../node_modules/@glidejs/glide/dist/glide.min.js"></script>
+    <script>
+      new Glide('.glide', { type: 'carousel', autoplay: 4500 }).mount();
+    </script>
   </body>
 </html>
