--- a/src/blog.html
+++ b/src/blog.html
@@ -1,177 +1,21 @@
 <!DOCTYPE html>
-<html lang="uk">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Blog</title>
+    <include src="./partials/head-favicon.html"></include>
     <link rel="stylesheet" href="./sass/index.scss" />
+    <script type="module" src="./index.js"></script>
+  </head>
 
-    <title> Blog Page</title>
-<include src="./partials/head-favicon.html"></include>
-</head>
-
-<body>
+  <body>
+    <include src="./partials/header.html"></include>
 
     <main>
-        <!---------------------section blog------------------->
-        <section class="blog">
-            <div class="container">
-                <!-- заголовок секції однаковий- такий же як Take order  и  Contacts -->
-                <!-- тому клас треба додати йому такий же як у iнших  -->
-                <h2 class="page-name">Blog</h2>
-
-                <ul class="blog-list">
-                    <li class="blog-item">
-                        <div class="blog-picture-desktop">
-                            <picture>
-                                <source srcset="./images/blog1_desk_1x.jpg 1x,
-                                                ./images/blog1_desk_2x.jpg 2x" media="(min-width: 1280px)" />
-                                <source srcset="./images/blog1_tablet_1x.jpg 1x,
-                                                ./images/blog1_tablet_2x.jpg 2x" media="(min-width: 768px)" />
-                                <source srcset="./images/blog1_mobile_1x.jpg 1x,
-                                                ./images/blog1_mobile_2x.jpg 2x" media="(max-width: 767px)" />
-                                <img src="./images/blog1_desk_1x.jpg" alt="blog" width="390">
-                            </picture>
-                        </div>
-                        <div class="blog-container-desktop">
-                            <h3 class="blog-title">Guide to Picking The Right Gaming Headset</h3>
-                            <div class="blog-container-tablet">
-                                <div class="blog-picture">
-                                    <picture>
-                                        <source srcset="./images/blog1_desk_1x.jpg 1x,
-                                                        ./images/blog1_desk_2x.jpg 2x" media="(min-width: 1280px)" />
-                                        <source srcset="./images/blog1_tablet_1x.jpg 1x,
-                                                        ./images/blog1_tablet_2x.jpg 2x" media="(min-width: 768px)" />
-                                        <source srcset="./images/blog1_mobile_1x.jpg 1x,
-                                                        ./images/blog1_mobile_2x.jpg 2x" media="(max-width: 767px)" />
-                                        <img src="./images/blog1_desk_1x.jpg" alt="blog" width="390">
-                                    </picture>
-                                </div>
-                                <div class="blog-content">
-                                    <span class="blog-writer">By Ray Ian Ampoloquio</span>
-                                    <span class="blog-updated">Updated on September 21, 2022</span>
-                                </div>
-                            </div>
-                            <p class="blog-text">Learn how to
-                                choose an amazing gaming headset with this checklist of
-                                just 9 surprisingly simple steps. Gaming headsets
-                                offer a handy and practical solution to any and all of your gaming audio needs. But, as
-                                with any kind of ...</p>
-
-                            <!-- посилання на Blog Article Page -->
-                            <a class="blog-etg" href="#">Learn more</a>
-                        </div>
-                    </li>
-                    <!------------------------------->
-
-                    <li class="blog-item">
-                        <div class="blog-picture-desktop">
-                            <picture>
-                                <source srcset="./images/blog2_desk_1x.jpg 1x,
-                                                ./images/blog2_desk_2x.jpg 2x" media="(min-width: 1280px)" />
-                                <source srcset="./images/blog2_tablet_1x.jpg 1x,
-                                                ./images/blog2_tablet_2x.jpg 2x" media="(min-width: 768px)" />
-                                <source srcset="./images/blog2_mobile_1x.jpg 1x,
-                                                ./images/blog2_mobile_2x.jpg 2x" media="(max-width: 767px)" />
-                                <img src="./images/blog2_desk_1x.jpg" alt="blog" width="390">
-                            </picture>
-                        </div>
-
-                        <div class="blog-container-desktop">
-                            <h3 class="blog-title">Mic Monitoring: What Is It and How It Is Relevant to Gaming</h3>
-                            <div class="blog-container-tablet">
-                                <div class="blog-picture">
-                                    <picture>
-                                        <source srcset="./images/blog2_desk_1x.jpg 1x,
-                                                        ./images/blog2_desk_2x.jpg 2x" media="(min-width: 1280px)" />
-                                        <source srcset="./images/blog2_tablet_1x.jpg 1x,
-                                                        ./images/blog2_tablet_2x.jpg 2x" media="(min-width: 768px)" />
-                                        <source srcset="./images/blog2_mobile_1x.jpg 1x,
-                                                        ./images/blog2_mobile_2x.jpg 2x" media="(max-width: 767px)" />
-                                        <img src="./images/blog2_desk_1x.jpg" alt="blog" width="390">
-                                    </picture>
-                                </div>
-                                <div class="blog-content">
-                                    <span class="blog-writer">By Gab L</span>
-                                    <span class="blog-updated">Updated on September 10, 2022</span>
-                                </div>
-                            </div>
-                            <p class="blog-text">An explanation and exploration of microphone monitoring — its benefits
-                                and how you can start using one of the most
-                                underrated features today ...</p>
-
-                            <!-- посилання на Blog Article Page -->
-                            <a class="blog-etg" href="#">Learn more</a>
-                        </div>
-                    </li>
-
-                    <!------------------------------->
-                    <li class="blog-item">
-                        <div class="blog-picture-desktop">
-                            <picture>
-                                <source srcset="./images/blog3_desk_1x.jpg 1x,
-                                                ./images/blog3_desk_2x.jpg 2x" media="(min-width: 1280px)" />
-                                <source srcset="./images/blog3_tablet_1x.jpg 1x,
-                                                ./images/blog3_tablet_2x.jpg 2x" media="(min-width: 768px)" />
-                                <source srcset="./images/blog3_mobile_1x.jpg 1x,
-                                                ./images/blog3_mobile_2x.jpg 2x" media="(max-width: 767px)" />
-                                <img src="./images/blog3_desk_1x.jpg" alt="blog" width="390">
-                            </picture>
-                        </div>
-                        <div class="blog-container-desktop">
-                            <h3 class="blog-title">How to Choose the Right Gaming Mouse</h3>
-                            <div class="blog-container-tablet">
-                                <div class="blog-picture">
-                                    <picture>
-                                        <source srcset="./images/blog3_desk_1x.jpg 1x,
-                                                        ./images/blog3_desk_2x.jpg 2x" media="(min-width: 1280px)" />
-                                        <source srcset="./images/blog3_tablet_1x.jpg 1x,
-                                                        ./images/blog3_tablet_2x.jpg 2x" media="(min-width: 768px)" />
-                                        <source srcset="./images/blog3_mobile_1x.jpg 1x,
-                                                        ./images/blog3_mobile_2x.jpg 2x" media="(max-width: 767px)" />
-                                        <img src="./images/blog3_desk_1x.jpg" alt="blog" width="390">
-                                    </picture>
-                                </div>
-                                <div class="blog-content">
-                                    <span class="blog-writer">By Michael Crider</span>
-                                    <span class="blog-updated">Updated on September 2, 2022</span>
-                                </div>
-                            </div>
-                            <p class="blog-text">A good mouse can make a big difference when playing your favorite
-                                games. Here’s what you need to know about grip styles,
-                                types of gaming mice, technical specs, and more, before purchasing a new gaming mouse
-                                ...</p>
-
-                            <!-- посилання на Blog Article Page -->
-                            <a class="blog-etg" href="#">Learn more</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-
-
-
-            <!--  Додала анімацію
-            для імітації процесу підвантаження інформації на сторінці. -->
-
-            <!--------------------------------------------------------->
-            <div class="loading">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <!--------------------------------------------------------->
-
-
-        </section>
-
-        <!-- @AKSEIEV -->
-    <include src="./partials/footer.html"></include>
-
+      <include src="./partials/blog.html"></include>
     </main>
 
-</body>
-
+    <include src="./partials/footer.html"></include>
+  </body>
 </html>
