--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 
       <!-- @biggujo - Dmytro Ivashchenko -->
       <include src="./partials/index-slider.html"></include>
+      <include src="./partials/sales.html"></include>
     </main>
 
     <include src="./partials/footer.html"></include>
